--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,14 +105,20 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/json/
-    - assets/image/
-    - assets/image/icon/
-    - assets/image/flag/
-    - assets/image/splash/
-    - assets/image/darkmode/
-    - assets/translations/
     - assets/
+    - assets/image/
+    - assets/image/bank/
+    - assets/image/benefit/
+    - assets/image/credit_card/
+    - assets/image/darkmode/
+    - assets/image/flag/
+    - assets/image/icon/
+    - assets/image/illustration/
+    - assets/image/notification/
+    - assets/image/splash/
+    - assets/image/stock/
+    - assets/json/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
